force-app/main/default/objects/Google_Auth_Key__mdt/Google_Auth_Key__mdt.object-meta.xml
<CustomObject>
    <label>Google Auth Key</label>
    <pluralLabel>Google Auth Keys</pluralLabel>
</CustomObject>