force-app/main/default/objects/Google_Auth_Key__mdt/fields/Auth_URL__c.field-meta.xml
<CustomField>
    <fullName>Auth_URL__c</fullName>
    <label>Auth URL</label>
    <type>TextArea</type>
</CustomField>