force-app/main/default/objects/Google_Auth_Key__mdt/fields/Scopes__c.field-meta.xml
<CustomField>
    <fullName>Scopes__c</fullName>
    <label>Scopes</label>
    <type>TextArea</type>
</CustomField>